--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   intl: ^0.17.0
   shared_preferences: ^2.0.15
   provider: ^6.0.4
+  image_picker: ^0.8.1+3
 
 dev_dependencies:
   flutter_test:
